# asmlib_x64

./: .clang-format  .gitignore  CMakeLists.txt  README.md
asmlib/: Assembler.cpp  Assembler.hpp  Operand.cpp  Operand.hpp
asmlib/private/: AssemblerEncoding.cpp  AssemblerEncoding.hpp  Assert.cpp  Assert.hpp
src/: CMakeLists.txt
src/asmlib_x64/: Assembler.cpp  Assembler.hpp  CMakeLists.txt  InstructionEncoding.cpp  InstructionEncoding.hpp  Instructions.inc  Operand.cpp  Operand.hpp
